<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="all">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_48dp"
        android:title="@string/home" />

    <item
        android:id="@+id/shopping_list"
        android:icon="@drawable/ic_shoppinglist"
        android:title="@string/shopping_list"/>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_48dp"
        android:title="@string/search" />

    <item
        android:id="@+id/invite_friends"
        android:icon="@drawable/ic_send_black_48dp"
        android:title="@string/invite_friends" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info_outline_black_48dp"
        android:title="@string/about" />
</group>

</menu>