<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/invite_friends"
        android:icon="@drawable/ic_send_black_48dp"
        android:iconTint="@android:color/darker_gray"
        android:title="@string/send"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_48dp"
        android:iconTint="@android:color/darker_gray"
        android:title="@string/search"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/shopping_list"
        android:icon="@drawable/ic_shoppinglist"
        android:iconTint="@android:color/darker_gray"
        android:title="@string/shopping_list"
        app:showAsAction="always"/>
</menu>